--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "ejs": "*",
+    "body-parser": "*"
   }
 }
