--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.16.1",
     "ejs": "*",
-    "body-parser": "*"
+    "body-parser": "*",
+    "mongoose": "*"
   }
 }
