- added passport dependency; - added authentication; - added user model; - added logout route; - prevent user from adding a comment if not signed in;

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "express": "^4.16.1",
     "ejs": "*",
     "body-parser": "*",
-    "mongoose": "*"
+    "mongoose": "*",
+    "express-session": "*",
+    "passport": "*",
+    "passport-local": "*",
+    "passport-local-mongoose": "*"
   }
 }
