- added EDIT/DELETE functionality for a posts; - added EDIT/DELETE functionality for a comments; - move isLoggedIn and ownership checks to another module;

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "*",
     "passport": "*",
     "passport-local": "*",
-    "passport-local-mongoose": "*"
+    "passport-local-mongoose": "*",
+    "method-override": "*"
   }
 }
