- added connect-flash dependecy; - added user messages functionality; - fixed bugs with manual changes of urls;

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "passport": "*",
     "passport-local": "*",
     "passport-local-mongoose": "*",
-    "method-override": "*"
+    "method-override": "*",
+    "connect-flash": "*"
   }
 }
