--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "passport-local": "*",
     "passport-local-mongoose": "*",
     "method-override": "*",
-    "connect-flash": "*"
+    "connect-flash": "*",
+    "node-geocoder": "*"
   }
 }
