- added Admin user functionality; - added functionality to check time after post or comment was created;

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport-local-mongoose": "*",
     "method-override": "*",
     "connect-flash": "*",
-    "node-geocoder": "*"
+    "node-geocoder": "*",
+    "moment": "*"
   }
 }
